/*
 * Copyright 2024 Fraunhofer AISEC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 *           $$\                           $$\ $$\   $$\
 *           $$ |                          $$ |\__|  $$ |
 *  $$$$$$$\ $$ | $$$$$$\  $$\   $$\  $$$$$$$ |$$\ $$$$$$\    $$$$$$\   $$$$$$\
 * $$  _____|$$ |$$  __$$\ $$ |  $$ |$$  __$$ |$$ |\_$$  _|  $$  __$$\ $$  __$$\
 * $$ /      $$ |$$ /  $$ |$$ |  $$ |$$ /  $$ |$$ |  $$ |    $$ /  $$ |$$ | \__|
 * $$ |      $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$\ $$ |  $$ |$$ |
 * \$$$$$$\  $$ |\$$$$$   |\$$$$$   |\$$$$$$  |$$ |  \$$$   |\$$$$$   |$$ |
 *  \_______|\__| \______/  \______/  \_______|\__|   \____/  \______/ \__|
 *
 * This file is part of Clouditor Community Edition.
 */
syntax = "proto3";

package clouditor.discovery.v1;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "api/discovery";

// Resource is the description of a resource and contains the semantic
// information according to our ontology.
message Resource {
  // Id contains a unique ID for each resource. This is specific for the cloud
  // provider this resource was gathered for and can for example be a resource
  // URL.
  string id = 1 [ (validate.rules).string.min_len = 1 ];

  // CloudServiceId is the UUID for the cloud service to which this resource
  // belongs to.
  string cloud_service_id = 2 [ (validate.rules).string.uuid = true ];

  oneof type {
    CloudResource cloud_resource = 10;
    Document document = 11;
  }

  // ResourceType contains a comma seperated string of resource types according
  // to our ontology. LEGACY PROPERTY just to make it compile
  string resource_type = 200 [ (validate.rules).string.min_len = 1 ];

  // Properties contains a protobuf struct that describe the resource in the
  // terms of our Clouditor ontology. LEGACY PROPERTY just to make it compile
  google.protobuf.Value properties = 201 [
    (tagger.tags) = "gorm:\"serializer:valuepb;type:json\"",
    (validate.rules).message.required = true
  ];
}

message CloudResource {
  GeoLocation geo_location = 1;
  oneof type {
    Compute compute = 10;
    Networking networking = 11;
  }
}

message Document { string filename = 1; }

message Compute {
  oneof type {
    VirtualMachine virtual_machine = 10;
    Container container = 11;
  }
}

message VirtualMachine {}

message Container {}

message Networking {
  oneof type { NetworkInterface network_interface = 10; }
}

message NetworkInterface { AccessRestriction access_restriction = 2; }

/// Security Features

message GeoLocation { string region = 2; }

message SecurityFeature {
  oneof type { Availabilty availability = 1; }
}

message Availabilty {
  oneof type { GeoLocation geo_location = 1; }
}

message Authorization {
  oneof type {
    ABAC abac = 10;
    AccessRestriction access_restriction = 11;
    RBAC rbac = 12;
  }
}

message ABAC {}

message AccessRestriction {
  oneof type { Firewall firewall = 1; }
}

message RBAC {}

message Firewall {
  oneof type { L3Firewall l3_firewall = 1; }
}

message L3Firewall {
  bool enabled = 1;
  bool inbound = 2;
  repeated string restricted_ports = 3;
}